--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,88 +8,209 @@
   </head>
   <body>
     <header class="page-header">
-        <img class="page-header__logo" scr="#"/>
+      <div class="page-header__wrapper nav--nojs nav--opened">
+        <div class="page-header__nav nav">
+          <div class="nav__logo"></div>
+          <button type="button" class="nav__button">Меню</button>
+        </div>
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
-          <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
+          <li class="list-menu__item"><a class="list-menu__link link-off list-menu__item--activ"  href="#">Каталог продукции</a></li>
          <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
+      </div>
     </header>
     <main>
       <section class="catalog">
+        <div class="catalog-wrapper">
           <h1>Каталог продукции</h1>
           <ul class="catalog-list">
             <li class="catalog-list__item item-catalog">
-              <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Pro 500г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>500 г Курица 700 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Pro 500г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Курица</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
             <li class="catalog-list__item item-catalog">
-              <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Pro 1000г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>1000 г Курица 1000 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Pro 1000г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Курица</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>1000 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
             <li class="catalog-list__item item-catalog">
-               <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Pro 500г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>500 г Рыба 700 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Pro 500г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Рыба</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
             <li class="catalog-list__item item-catalog">
-              <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Pro 1000г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>1000 г Рыба 1000 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Pro 1000г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Рыба</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>1000 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
             <li class="catalog-list__item item-catalog">
-              <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Slim 500г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>500 г Гречка 400 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Slim 500г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Гречка</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>400 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
             <li class="catalog-list__item item-catalog">
-              <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Slim 500г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>1000 г Гречка 500 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Slim 1000г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Гречка</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
             <li class="catalog-list__item item-catalog">
-              <a class="item-catalog__link" href="#">
-                <h3>Cat Energy Slim 500г</h3>
-                <img src="#"/>
-              </a>
-              <p>Объем Вкус Цена</p>
-              <p>500 г Рис 400 Р.</p>
+              <div class="item-catalog__info">
+                <a><img src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Вкус курицы большая банка"/></a>
+                <div class="item-catalog__text">
+                <a class="item-catalog__link" href="#">
+                  <h3>Cat Energy<br>Slim 500г</h3>
+                </a>
+                <table class="item-catalog__table">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Рис</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>400 Р.</td>
+                  </tr>
+                </table>
+                </div>
+              </div>
               <a class="item-catalog__link-button">Заказать</a>
             </li>
           </ul>
           <div class="catalog-product">
+            <div class="catalog-product__plus"></div>
             <p class="catalog-product__heading">Показать еще 100500 товаров</p>
             <p class="catalog-product__text">На самом деле вкусов гораздо больше!</p>
             <a class="catalog-product__link" href="#">Показать все</a>
           </div>
+        </div>
       </section>
       <section class="additional-product">
+        <div class="additional-product__wrapper">
           <h2>Дополнительные товары</h2>
           <ul class="additional-product__list list-product">
             <li class="list-product__item">
@@ -113,27 +234,50 @@
               <a class="list-product__link" href="#">Заказать</a>
             </li>
           </ul>
+          </div>
       </section>
       <section class="present">
-        <p>Закажите все и получите чехол для кота в подарок!</p>
+        <div class="present__wrapper">
+          <svg class="present__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55.5 60" style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
+            <path
+              d="M52.3,12.2h-7c0.5-0.7,0.8-1.4,1.1-2.2c0.6-2,0.4-4.1-0.6-5.9c-1-1.8-2.6-3.1-4.6-3.7c-2-0.6-4.1-0.4-5.9,0.6
+            c-3.6,2-6.2,6.1-7.6,9c-1.4-2.9-4-7.1-7.6-9c-3.8-2-8.5-0.6-10.5,3.1c-1.4,2.7-1.2,5.8,0.5,8.1h-7c-1.7,0-3.1,1.4-3.1,3.1v9.4
+            c0,1.7,1.4,3.1,3.1,3.1H4v26.1c0,3.3,2.7,6,6,6h35.5c3.3,0,6-2.7,6-6V27.8h0.8c1.7,0,3.1-1.4,3.1-3.1v-9.4
+            C55.5,13.6,54.1,12.2,52.3,12.2z M36.5,3c1.3-0.7,2.7-0.8,4.1-0.4C41.9,3,43,3.9,43.7,5.2c0.7,1.3,0.8,2.7,0.4,4.1
+            c-0.4,1.2-1.1,2.2-2.2,2.9H29.4C30.5,9.6,33,5,36.5,3z M11.7,5.2C13.2,2.6,16.4,1.6,19,3c3.5,1.9,6,6.6,7.1,9.1H13.5
+            C11.2,10.7,10.4,7.6,11.7,5.2z M26.5,27.8v13.7H6.4V27.8H26.5z M6.4,53.9v-10h20.2v13.7H10C8,57.6,6.4,55.9,6.4,53.9z M45.5,57.6
+            H28.9V43.9h20.2v10C49.1,55.9,47.5,57.6,45.5,57.6z M49.1,41.5H28.9V27.8h20.2V41.5z M53.1,24.7c0,0.4-0.3,0.7-0.7,0.7h-2
+            c0,0,0,0,0,0s0,0,0,0H27.7c0,0,0,0,0,0s0,0,0,0H5.2c0,0,0,0,0,0s0,0,0,0h-2c-0.4,0-0.7-0.3-0.7-0.7v-9.4c0-0.4,0.3-0.7,0.7-0.7h49.2
+            c0.4,0,0.7,0.3,0.7,0.7V24.7z"/>
+          </svg>
+        <p class="present__text">Закажите все<br>и получите чехол для кота в подарок!</p>
+        </div>
       </section>
       <section class="map">
-        <h2>Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img src="#"/>
+        <div class="map__wrapper">
+           <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
+           <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="map__img"></div>
       </section>
     </main>
     <foooter class="page-footer">
-        <img class="page-footer__logo" src="#"/>
-        <ul class="page-footer_social list-social">
-          <li class="list-social__item">ВКонтакте</li>
-          <li class="list-social__item">Instagram</li>
-          <li class="list-social__item">Facebook</li>
-        </ul>
-        <div class="page-footer__copyright copyright">
-          <p class="copyright__text">HTML Academy</p>
-          <img class="copyright_icon" src="#"/>
+      <div class="page-footer__wrapper">
+        <ul class="page-footer__list">
+        <li><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></li>
+        <li><ul class="page-footer__social list-social">
+          <li><a href="#" class="list-social__vk"></a></li>
+          <li><a href="#" class="list-social__ins"></a></li>
+          <li><a href="#" class="list-social__fb"></a></li>
+          </ul>
+        </li>
+        <li><div class="page-footer__copyright copyright">
+          <p class="copyright_text">HTML Academy</p>
+          <svg class="copyright__logo" width="35" height="42" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </div>
+        </li>
+        </ul>
+      </div>
     </foooter>
   </body>
 </html>
