--- a/source/form.html
+++ b/source/form.html
@@ -8,67 +8,85 @@
   </head>
   <body>
     <header class="page-header">
-        <img class="page-header__logo" scr="#"/>
+      <div class="page-header__wrapper nav--nojs nav--opened">
+        <div class="page-header__nav nav">
+          <div class="nav__logo"></div>
+          <button type="button" class="nav__button">Меню</button>
+        </div>
         <ul class="page-header__list list-menu">
           <li class="list-menu__item"><a class="list-menu__link" href="index.html">Главная</a></li>
           <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
-         <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
+         <li class="list-menu__item"><a class="list-menu__link link-off list-menu__item--activ" href="#">Подбор программы</a></li>
         </ul>
+      </div>
     </header>
     <main>
       <section class="profile">
+        <div class="profile__wrapper">
           <h1 class="profile__heading">Подбор программы</h1>
           <p class="profile__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
           <form class="profile__form form" action="https://echo.htmlacademy.ru/courses" method="post">
             <fieldset class="form__info-cat">
-              <label>Имя:*<input type="text" name="catname" placeholder="Барсик" required></label>
-              <label>Вес (кг):*<input type="number" name="catweight" placeholder="7" required></label>
+              <label>Имя:*<input type="text" name="catname" placeholder="Барсик" required></label><br>
+              <label>Вес (кг):*<input type="number" name="catweight" placeholder="7" required></label><br>
               <label>Возраст (лет):<input type="number" name="catage" placeholder="7"></label>
             </fieldset>
             <fieldset class="form__weight">
-              <label><input type="radio" name="catradio" value="losingweight" checked>Похудение</label>
-              <label><input type="radio" name="catradio" value="weightgain">Набор веса</label>
-              <label><input type="radio" name="catradio" value="nothing">Не знаю (нужен ваш совет)</label>
+              <ul>
+                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="losingweight" checked class="visually-hidden"><span class="checkbox-radio">Похудение</span></label></li><br>
+                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio">Набор веса</span></label></li><br>
+                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="nothing" class="visually-hidden"><span class="checkbox-radio">Не знаю (нужен ваш совет)</span></label></li>
+              </ul>
             </fieldset>
             <fieldset class="form__owner">
-              <p>Контактные данные (владельца кота)</p>
-              <label>E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label>
+              <p class="form__p"></p>Контактные данные (владельца кота)</p>
+              <label>E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label><br>
               <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" required></label>
             </fieldset>
             <fieldset class="form__comment">
-              <p>Комментарий</p>
+              <p class="form__p"></p>Комментарий</p>
               <label>
                 <textarea name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
               </label>
             </fieldset>
             <fieldset class="form__additional">
-              <p>Дополнительно</p>
-              <label><input type="checkbox" name="sweetener" checked>Сахорозаменитель</label>
-              <label><input type="checkbox" name="Water">Питьевая вода</label>
-              <label><input type="checkbox" name="Milk">Молоко</label>
-              <label><input type="checkbox" name="Vitamins">Витамины</label>
+              <p class="form__p">Дополнительно</p>
+              <label><input type="checkbox" class="form__additional-checkbox" name="sweetener" checked><span class="checkbox-indicator">Сахорозаменитель</span></label><br>
+              <label><input type="checkbox" class="form__additional-checkbox" name="Water"><span class="checkbox-indicator">Питьевая вода</span></label><br>
+              <label><input type="checkbox" class="form__additional-checkbox" name="Milk"><span class="checkbox-indicator">Молоко</span></label><br>
+              <label><input type="checkbox" class="form__additional-checkbox" name="Vitamins"><span class="checkbox-indicator">Витамины</span></label>
             </fieldset>
-            <input type="submit" value="Отправить заявку">
+            <input class="form__button" type="submit" value="Отправить заявку">
             <p class="form__text">* - обязательные поля формы</p>
           </form>
+          </div>
       </section>
       <section class="map">
-        <h2>Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img src="#"/>
+        <div class="map__wrapper">
+           <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
+           <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="map__img"></div>
       </section>
     </main>
     <foooter class="page-footer">
-        <img class="page-footer__logo" src="#"/>
-        <ul class="page-footer_social list-social">
-          <li class="list-social__item">ВКонтакте</li>
-          <li class="list-social__item">Instagram</li>
-          <li class="list-social__item">Facebook</li>
-        </ul>
-        <div class="page-footer__copyright copyright">
+      <div class="page-footer__wrapper">
+        <ul class="page-footer__list">
+        <li><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></li>
+        <li><ul class="page-footer__social list-social">
+          <li><a href="#" class="list-social__vk"></a></li>
+          <li><a href="#" class="list-social__ins"></a></li>
+          <li><a href="#" class="list-social__fb"></a></li>
+          </ul>
+        </li>
+        <li><div class="page-footer__copyright copyright">
           <p class="copyright_text">HTML Academy</p>
-          <img class="copyright_icon" src="#"/>
+          <svg class="copyright__logo" width="35" height="42" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </div>
+        </li>
+        </ul>
+      </div>
     </foooter>
+    <script src="../js/menu.js"></script>
   </body>
 </html>
