--- a/source/index.html
+++ b/source/index.html
@@ -8,71 +8,108 @@
   </head>
   <body>
     <header class="page-header">
-        <h1 class="page-header__h1">Функциональное питание для котов</h1>
-        <p class="page-header__text">Занялся собой? Займись котом!</p>
-        <img class="page-header__food" src="#" width="280" height="275"/>
-        <img class="page-header__logo" scr="#"/>
+      <div class="page-header__wrapper nav--nojs nav--opened">
+        <div class="page-header__nav nav">
+          <div class="nav__logo"></div>
+          <button type="button" class="nav__button">Меню</button>
+        </div>
         <ul class="page-header__list list-menu">
-          <li class="list-menu__item"><a class="list-menu__link" href="#">Главная</a></li>
+          <li class="list-menu__item"><a class="list-menu__link link-off list-menu__item--activ" href="#">Главная</a></li>
           <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
          <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
-        <a class="page-header__link" href="form.html">Подобрать программу</a>
+      </div>
     </header>
     <main>
+      <section class="cover">
+        <div class="cover__wrapper">
+        <h1 class="cover__h1">Функциональное питание для котов</h1>
+        <p class="cover__text">Занялся собой? Займись котом!</p>
+        <div class="cover__food"></div>
+        <a class="cover__link" href="form.html">Подобрать программу</a>
+      </div>
+      </section>
       <section class="program">
           <h2 class="visually-hidden">Виды программ</h2>
           <div class="program__weight weight">
-            <h3>Похудение</h3>
+            <div class="weight__wrapper">
+            <h3 class="weight__slim">Похудение</h3>
             <p class="weight__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="weight__link" href="#">Каталог SLIM</a>
+            </div>
           </div>
           <div class="program__weight weight">
-            <h3>Набор массы</h3>
+            <div class="weight__wrapper">
+            <h3 class="weight__pro">Набор массы</h3>
             <p class="weight__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="weight__link" href="#">Каталог PRO</a>
+            </div>
           </div>
       </section>
       <section class="advantages">
-          <h2>Как это работает?</h2>
+        <div class="advantages__wrapper">
+          <h2>Как это работает</h2>
           <ul class="advantages__list list-page">
-            <li class="list-page__item">Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="list-page__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="list-page__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="list-page__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="list-page__item item--leaf"><div class="item--namber">1</div>Функциональное питание содержит только полезные питательные вещества.</li>
+            <li class="list-page__item item--powder"><div class="item--namber">2</div>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="list-page__item item--dining"><div class="item--namber">3</div>Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="list-page__item item--clock"><div class="item--namber">4</div>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
           </ul>
+        </div>
       </section>
       <section class="example">
+        <div class="expamle__wrapper">
           <h2>Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <div class="example__block block">
+          <div class="block__weight">
             <h3 class="block__heading">5 кг</h3>
-            <p class="block__content">Снижение веса</p>
+            <p class="block__content">снижение<br>веса</p>
           </div>
-          <div class="example__block">
+          <div class="block__time">
             <h3 class="block__heading">60 дней</h3>
-            <p class="block__content">Затрачено времени</p>
+            <p class="block__content">затрачено<br>времени</p>
           </div>
-          <p class="example__text">Затраты напитание: 15 000 рублей</p>
+        </div>
+          <p class="example__text">Затраты на питание: 15 000 руб.</p>
+        <div class="example__slider slider">
+          <div class="slider__befor">
+            <img src="../img/before-mobile@1x.png" width="300" height="245" alt="Изображение кота Бориса до пухедения">
+            <button type="button">Далее</button>
+            <p>До</p>
+          </div>
+          <div class="slider__after">
+            <img src="../img/after-mobile@1x.png" width="280" height="245" alt="Изображение кота Бориса до пухедения">
+            <button type="button">Назад</button>
+            <p>После</p>
+          </div>
+        </div>
+      </div>
       </section>
       <section class="map">
-        <h2>Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img src="#"/>
+        <div class="map__wrapper">
+           <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
+           <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="map__img"></div>
       </section>
     </main>
     <foooter class="page-footer">
       <div class="page-footer__wrapper">
-        <img class="page-footer__logo" src="#"/>
-        <ul class="page-footer__social list-social">
-          <li class="list-social__item">ВКонтакте</li>
-          <li class="list-social__item">Instagram</li>
-          <li class="list-social__item">Facebook</li>
-        </ul>
-        <div class="page-footer__copyright copyright">
+        <ul class="page-footer__list">
+        <li><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></li>
+        <li><ul class="page-footer__social list-social">
+          <li><a href="#" class="list-social__vk"></a></li>
+          <li><a href="#" class="list-social__ins"></a></li>
+          <li><a href="#" class="list-social__fb"></a></li>
+          </ul>
+        </li>
+        <li><div class="page-footer__copyright copyright">
           <p class="copyright_text">HTML Academy</p>
-          <img class="copyright_icon" src="#"/>
+          <svg class="copyright__logo" width="35" height="42" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </div>
+        </li>
+        </ul>
       </div>
     </foooter>
   </body>
